--- a/proyecto_final_pdm/android/app/src/main/AndroidManifest.xml
+++ b/proyecto_final_pdm/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.proyecto_final_pdm">
+    
     <!-- io.flutter.app.FlutterApplication is an android.app.Application that
          calls FlutterMain.startInitialization(this); in its onCreate method.
          In most cases you can leave this as-is, but you if you want to provide
@@ -26,5 +27,8 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyD6G2ivpaS7nLcMrwC1Fi_fSROMBkxWFS4"/>
     </application>
 </manifest>
