--- a/proyecto_final_pdm/pubspec.yaml
+++ b/proyecto_final_pdm/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   cloud_firestore: ^0.13.4+1
   url_launcher: ^5.4.2
   photo_view: ^0.9.2
-  
+  charts_flutter: ^0.9.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
